--- a/_posts/user_guide_python/python_streaming.ipynb
+++ b/_posts/user_guide_python/python_streaming.ipynb
@@ -846,7 +846,7 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'python_streaming', 'python/python-streaming', 'Getting Started with Plotly Streaming',\n",
+    "    'python_streaming', 'python/python-streaming//', 'Getting Started with Plotly Streaming',\n",
     "    'Getting Started with Plotly Streaming',\n",
     "    title = 'Getting Started with Plotly Streaming',\n",
     "    thumbnail='', language='python',\n",
