added new streaming example and r-shiny gallery

--- a/_posts/user_guide_python/subplot-streaming.ipynb
+++ b/_posts/user_guide_python/subplot-streaming.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -40,10 +40,10 @@
     {
      "data": {
       "text/plain": [
-       "'1.9.9'"
+       "'1.9.10'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -117,8 +117,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "v6f5oeb8ut\n",
-      "96kd717ava\n"
+      "0xhh453c6m\n",
+      "4lm5a0gsr8\n"
      ]
     }
    ],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +181,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
     "for i in range(200):\n",
     "    nums = np.random.random_integers(0,10, size=(3))\n",
     "    s_1.write(dict(labels=['one', 'two', 'three'], values=nums, type='pie'))\n",
-    "    s_2.write(dict(x=['one', 'two', 'three'], y=nums, type='bar'))\n",
+    "    s_2.write(dict(x=['one', 'two', 'three'], y=nums, type='bar', marker=dict(color=[\"blue\", \"orange\", \"green\"])))\n",
     "    time.sleep(0.8)\n",
     "s_1.close()\n",
     "s_2.close()\n"
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -311,13 +311,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
-     ]
     }
    ],
    "source": [
