--- a/_posts/python/ternary-contour/ternary-contour.ipynb
+++ b/_posts/python/ternary-contour/ternary-contour.ipynb
@@ -122,80 +122,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{u'clay': [{u'clay': 55, u'sand': 45, u'silt': 0},\n",
-      "           {u'clay': 100, u'sand': 0, u'silt': 0},\n",
-      "           {u'clay': 60, u'sand': 0, u'silt': 40},\n",
-      "           {u'clay': 40, u'sand': 20, u'silt': 40},\n",
-      "           {u'clay': 40, u'sand': 45, u'silt': 15}],\n",
-      " u'clay loam': [{u'clay': 40, u'sand': 45, u'silt': 15},\n",
-      "                {u'clay': 40, u'sand': 20, u'silt': 40},\n",
-      "                {u'clay': 28, u'sand': 20, u'silt': 52},\n",
-      "                {u'clay': 28, u'sand': 45, u'silt': 27}],\n",
-      " u'loam': [{u'clay': 28, u'sand': 45, u'silt': 27},\n",
-      "           {u'clay': 28, u'sand': 22, u'silt': 50},\n",
-      "           {u'clay': 5, u'sand': 45, u'silt': 50},\n",
-      "           {u'clay': 5, u'sand': 53, u'silt': 42},\n",
-      "           {u'clay': 20, u'sand': 53, u'silt': 32}],\n",
-      " u'loamy sand': [{u'clay': 0, u'sand': 90, u'silt': 10},\n",
-      "                 {u'clay': 10, u'sand': 90, u'silt': 0},\n",
-      "                 {u'clay': 15, u'sand': 85, u'silt': 0},\n",
-      "                 {u'clay': 0, u'sand': 70, u'silt': 30}],\n",
-      " u'sand': [{u'clay': 0, u'sand': 100, u'silt': 0},\n",
-      "           {u'clay': 10, u'sand': 90, u'silt': 0},\n",
-      "           {u'clay': 0, u'sand': 90, u'silt': 10}],\n",
-      " u'sandy clay': [{u'clay': 35, u'sand': 65, u'silt': 0},\n",
-      "                 {u'clay': 35, u'sand': 45, u'silt': 20},\n",
-      "                 {u'clay': 55, u'sand': 45, u'silt': 0}],\n",
-      " u'sandy clay loam': [{u'clay': 20, u'sand': 80, u'silt': 0},\n",
-      "                      {u'clay': 35, u'sand': 65, u'silt': 0},\n",
-      "                      {u'clay': 35, u'sand': 45, u'silt': 20},\n",
-      "                      {u'clay': 28, u'sand': 45, u'silt': 27},\n",
-      "                      {u'clay': 20, u'sand': 53, u'silt': 32}],\n",
-      " u'sandy loam': [{u'clay': 0, u'sand': 70, u'silt': 30},\n",
-      "                 {u'clay': 15, u'sand': 85, u'silt': 0},\n",
-      "                 {u'clay': 20, u'sand': 80, u'silt': 0},\n",
-      "                 {u'clay': 20, u'sand': 53, u'silt': 32},\n",
-      "                 {u'clay': 5, u'sand': 53, u'silt': 42},\n",
-      "                 {u'clay': 5, u'sand': 45, u'silt': 50},\n",
-      "                 {u'clay': 0, u'sand': 50, u'silt': 50}],\n",
-      " u'silt': [{u'clay': 0, u'sand': 0, u'silt': 100},\n",
-      "           {u'clay': 0, u'sand': 20, u'silt': 80},\n",
-      "           {u'clay': 12, u'sand': 8, u'silt': 80},\n",
-      "           {u'clay': 12, u'sand': 0, u'silt': 88}],\n",
-      " u'silty clay': [{u'clay': 60, u'sand': 0, u'silt': 40},\n",
-      "                 {u'clay': 40, u'sand': 0, u'silt': 60},\n",
-      "                 {u'clay': 40, u'sand': 20, u'silt': 40}],\n",
-      " u'silty clay loam': [{u'clay': 28, u'sand': 0, u'silt': 72},\n",
-      "                      {u'clay': 28, u'sand': 20, u'silt': 52},\n",
-      "                      {u'clay': 40, u'sand': 20, u'silt': 40},\n",
-      "                      {u'clay': 40, u'sand': 0, u'silt': 60}],\n",
-      " u'silty loam': [{u'clay': 0, u'sand': 50, u'silt': 50},\n",
-      "                 {u'clay': 28, u'sand': 22, u'silt': 50},\n",
-      "                 {u'clay': 28, u'sand': 0, u'silt': 72},\n",
-      "                 {u'clay': 12, u'sand': 0, u'silt': 88},\n",
-      "                 {u'clay': 12, u'sand': 8, u'silt': 80},\n",
-      "                 {u'clay': 0, u'sand': 20, u'silt': 80}]}\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "from pprint import pprint\n",
-    "pprint(data)"
+    "### Create the traces:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -209,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -233,10 +168,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add the layout:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -254,19 +196,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "figure = dict(data=traces, layout=layout)"
+    "### Create the figure and plot the graph:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +212,7 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"2d4fe30e-d4f7-4172-b53e-ce01ff6a9763\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2d4fe30e-d4f7-4172-b53e-ce01ff6a9763\", [{\"a\": [0, 15, 20, 20, 5, 5, 0], \"c\": [30, 0, 0, 32, 42, 50, 50], \"b\": [70, 85, 80, 53, 53, 45, 50], \"text\": \"sandy loam\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [20, 35, 35, 28, 20], \"c\": [0, 0, 20, 27, 32], \"b\": [80, 65, 45, 45, 53], \"text\": \"sandy clay loam\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [40, 40, 28, 28], \"c\": [15, 40, 52, 27], \"b\": [45, 20, 20, 45], \"text\": \"clay loam\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [0, 10, 15, 0], \"c\": [10, 0, 0, 30], \"b\": [90, 90, 85, 70], \"text\": \"loamy sand\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [35, 35, 55], \"c\": [0, 20, 0], \"b\": [65, 45, 45], \"text\": \"sandy clay\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [60, 40, 40], \"c\": [40, 60, 40], \"b\": [0, 0, 20], \"text\": \"silty clay\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [0, 28, 28, 12, 12, 0], \"c\": [50, 50, 72, 88, 80, 80], \"b\": [50, 22, 0, 0, 8, 20], \"text\": \"silty loam\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [0, 10, 0], \"c\": [0, 0, 10], \"b\": [100, 90, 90], \"text\": \"sand\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [28, 28, 40, 40], \"c\": [72, 52, 40, 60], \"b\": [0, 20, 20, 0], \"text\": \"silty clay loam\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [55, 100, 60, 40, 40], \"c\": [0, 0, 40, 40, 15], \"b\": [45, 0, 0, 20, 45], \"text\": \"clay\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [0, 0, 12, 12], \"c\": [100, 80, 80, 88], \"b\": [0, 20, 8, 0], \"text\": \"silt\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [28, 28, 5, 5, 20], \"c\": [27, 50, 50, 42, 32], \"b\": [45, 22, 45, 53, 53], \"text\": \"loam\", \"fillcolor\": \"red\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}], {\"showlegend\": false, \"ternary\": {\"sum\": 100, \"baxis\": {\"title\": \"sand\", \"linewidth\": 2, \"ticks\": \"outside\", \"ticksuffix\": \"%\", \"min\": 0.01}, \"caxis\": {\"title\": \"silt\", \"linewidth\": 2, \"ticks\": \"outside\", \"ticksuffix\": \"%\", \"min\": 0.01}, \"aaxis\": {\"title\": \"clay\", \"linewidth\": 2, \"ticks\": \"outside\", \"ticksuffix\": \"%\", \"min\": 0.01}}, \"title\": \"Simple Ternary Contour Plot with Python\"}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"6b6aa798-3136-4965-9775-03669e8389e5\" style=\"height: 525; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6b6aa798-3136-4965-9775-03669e8389e5\", [{\"a\": [0, 15, 20, 20, 5, 5, 0], \"c\": [30, 0, 0, 32, 42, 50, 50], \"b\": [70, 85, 80, 53, 53, 45, 50], \"text\": \"sandy loam\", \"fillcolor\": \"#8dd3c7\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [20, 35, 35, 28, 20], \"c\": [0, 0, 20, 27, 32], \"b\": [80, 65, 45, 45, 53], \"text\": \"sandy clay loam\", \"fillcolor\": \"#ffffb3\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [40, 40, 28, 28], \"c\": [15, 40, 52, 27], \"b\": [45, 20, 20, 45], \"text\": \"clay loam\", \"fillcolor\": \"#bebada\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [0, 10, 15, 0], \"c\": [10, 0, 0, 30], \"b\": [90, 90, 85, 70], \"text\": \"loamy sand\", \"fillcolor\": \"#fb8072\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [35, 35, 55], \"c\": [0, 20, 0], \"b\": [65, 45, 45], \"text\": \"sandy clay\", \"fillcolor\": \"#80b1d3\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [60, 40, 40], \"c\": [40, 60, 40], \"b\": [0, 0, 20], \"text\": \"silty clay\", \"fillcolor\": \"#fdb462\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [0, 28, 28, 12, 12, 0], \"c\": [50, 50, 72, 88, 80, 80], \"b\": [50, 22, 0, 0, 8, 20], \"text\": \"silty loam\", \"fillcolor\": \"#b3de69\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [0, 10, 0], \"c\": [0, 0, 10], \"b\": [100, 90, 90], \"text\": \"sand\", \"fillcolor\": \"#fccde5\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [28, 28, 40, 40], \"c\": [72, 52, 40, 60], \"b\": [0, 20, 20, 0], \"text\": \"silty clay loam\", \"fillcolor\": \"#d9d9d9\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [55, 100, 60, 40, 40], \"c\": [0, 0, 40, 40, 15], \"b\": [45, 0, 0, 20, 45], \"text\": \"clay\", \"fillcolor\": \"#bc80bd\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [0, 0, 12, 12], \"c\": [100, 80, 80, 88], \"b\": [0, 20, 8, 0], \"text\": \"silt\", \"fillcolor\": \"#ccebc5\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}, {\"a\": [28, 28, 5, 5, 20], \"c\": [27, 50, 50, 42, 32], \"b\": [45, 22, 45, 53, 53], \"text\": \"loam\", \"fillcolor\": \"#ffed6f\", \"line\": {\"color\": \"#444\"}, \"fill\": \"toself\", \"type\": \"scatterternary\", \"mode\": \"lines\"}], {\"showlegend\": false, \"ternary\": {\"sum\": 100, \"baxis\": {\"title\": \"sand\", \"linewidth\": 2, \"ticks\": \"outside\", \"ticksuffix\": \"%\", \"min\": 0.01}, \"caxis\": {\"title\": \"silt\", \"linewidth\": 2, \"ticks\": \"outside\", \"ticksuffix\": \"%\", \"min\": 0.01}, \"aaxis\": {\"title\": \"clay\", \"linewidth\": 2, \"ticks\": \"outside\", \"ticksuffix\": \"%\", \"min\": 0.01}}, \"title\": \"Simple Ternary Contour Plot with Python\"}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -285,6 +223,7 @@
     }
    ],
    "source": [
+    "figure = dict(data=traces, layout=layout)\n",
     "iplot(figure, validate=False)"
    ]
   },
@@ -295,7 +234,21 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
+    "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
+    "\n",
+    "! pip install publisher --upgrade\n",
+    "import publisher\n",
+    "publisher.publish(\n",
+    "    'ternary-contour.ipynb', 'python/ternary-contour', 'Python Ternary Contour Plots | plotly',\n",
+    "    'How to make Ternary Contour Plot in Python with Plotly.',\n",
+    "    name = 'Ternary Contour Plots',\n",
+    "    thumbnail='thumbnail/ternary-contour.jpg', language='python',\n",
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=2)"
+   ]
   }
  ],
  "metadata": {
