--- a/_posts/user_guide_python/geo-streaming.ipynb
+++ b/_posts/user_guide_python/geo-streaming.ipynb
@@ -288,38 +288,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid.\n",
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid.\n",
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid.\n",
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid.\n",
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid.\n",
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid.\n",
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid.\n",
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid.\n",
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid.\n",
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid.\n",
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid.\n",
-      "Server responded with status code: 404\n",
-      "and message: streamtoken not registered or valid."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def lets_stream():\n",
     "\n",
@@ -371,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -405,6 +374,16 @@
      "output_type": "stream",
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning: Your URL has more than 2 parts... are you sure?\n",
+      "  warnings.warn('Your URL has more than 2 parts... are you sure?')\n"
      ]
     }
    ],
