Another attempt to add rendered plot in notebook

--- a/_posts/python/ternary-contour/ternary-contour.ipynb
+++ b/_posts/python/ternary-contour/ternary-contour.ipynb
@@ -224,7 +224,7 @@
    ],
    "source": [
     "figure = dict(data=traces, layout=layout)\n",
-    "iplot(figure, validate=False)"
+    "plot(figure, validate=False)"
    ]
   },
   {
@@ -280,6 +280,29 @@
     "    name = 'Ternary Contour Plots',\n",
     "    thumbnail='thumbnail/ternary-contour.jpg', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'file:///Users/tarun/plotly/docs_new/_posts/python/ternary-contour/temp-plot.html'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from plotly.offline import plot\n",
+    "plot(figure, validate=False)"
    ]
   },
   {
