change section for ternary contour

--- a/_posts/python/ternary-contour/ternary-contour.ipynb
+++ b/_posts/python/ternary-contour/ternary-contour.ipynb
@@ -279,7 +279,7 @@
     "    'How to make Ternary Contour Plot in Python with Plotly.',\n",
     "    name = 'Ternary Contour Plots',\n",
     "    thumbnail='thumbnail/ternary-contour.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=2)"
+    "    page_type='example_index', has_thumbnail='true', display_as='scientific', order=33)"
    ]
   },
   {
