updated thumbnail for streaming guide

--- a/_posts/user_guide_python/python_streaming.ipynb
+++ b/_posts/user_guide_python/python_streaming.ipynb
@@ -856,7 +856,7 @@
     "    'python_streaming', 'python/python-streaming//', 'Getting Started with Plotly Streaming',\n",
     "    'Getting Started with Plotly Streaming',\n",
     "    title = 'Getting Started with Plotly Streaming',\n",
-    "    thumbnail='', language='python',\n",
+    "    thumbnail='http://images.plot.ly/plotly-documentation/thumbnail/streaming-thumb-square.gif', language='python',\n",
     "    layout='user-guide', has_thumbnail='false') "
    ]
   },
